--- a/EduSync/src/components/Header.css
+++ b/EduSync/src/components/Header.css
@@ -1,6 +1,10 @@
 .header{
-   position: fixed; 
     width: 100%; 
+    height: 92px;
     background-color: #B8D900;
+    display: flex;
+    
+
+   
 
 }
